fix plus alignment

--- a/src/editor/editor.css
+++ b/src/editor/editor.css
@@ -620,13 +620,13 @@
 }
 
 .ghost-plus-big .hvy-ui-icon {
-  width: 2.1rem;
-  height: 2.1rem;
+  width: 2rem;
+  height: 2rem;
 }
 
 .ghost-plus-small .hvy-ui-icon {
-  width: 1.55rem;
-  height: 1.55rem;
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
 .ghost-label {
@@ -662,8 +662,8 @@
 }
 
 .compact-add-component-ghost .ghost-plus-small .hvy-ui-icon {
-  width: 1.1rem;
-  height: 1.1rem;
+  width: 18px;
+  height: 18px;
 }
 
 .compact-add-component-ghost .ghost-label {
@@ -771,8 +771,8 @@
 }
 
 .component-picker-trigger .hvy-ui-icon {
-  width: 1.15rem;
-  height: 1.15rem;
+  width: 1.25rem;
+  height: 1.25rem;
 }
 
 .component-picker-trigger:hover,
